dafolo/templates/quarkus-pipeline-test/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dafolo-ingress
  namespace: dafolo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
#    nginx.ingress.kubernetes.io/app-root: /quarkus <-- Hvad er det her til??
spec:
  rules:
    - host: digitor.dk
      http:
        paths:
        - path: /quarkus(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: quarkus-pipeline-test
              port:
                number: 80
